--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Peace Jokanola</div>
-                <div class="text-3">And I'm a Graphic Designer & Website Developer <span class="typing"></span></div>
-                <a href="wa.link/+2348140876243">Hire me</a>
+                <div class="text-3">And I'm a  <span class="typing"></span></div>
+                <a href="https://bit.ly/peacedesigns">Hire me</a>
             </div>
         </div>
     </section>
@@ -84,7 +84,7 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design & Development</div>
-                        <p>You need a fully fiunctional website build to support your digital growth strategy. 
+                        <p>You need a fully functional website build to support your digital growth strategy. 
                             We've built websites for several brands around the world and we are excited to get to work on yours.</p>
                     </div>
                 </div>
@@ -227,7 +227,7 @@
                             <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
-                            <button type="submit">Send message</button>
+                            <button type="submit"> <a href="https://bit.ly/peacedesigns">Send message</a> </button>
                         </div>
                     </form>
                 </div>
@@ -237,7 +237,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Designed By <a href="#">Peace Jokanola</a> | <span class="far fa-copyright"></span> All rights reserved.</span>
+        <span>Designed By <a href="#">Peace Jokanola</a> | <span class="far fa-copyright"></span> </span>
     </footer>
 
     <script src="script.js"></script>
